# RESTful-APP

./: alembic.ini  main.py  pyproject.toml  readme
app/api/: endpoints.py
app/api/models/: models.py
app/database/: database.py
app/database/migrations/: env.py
