[tool.poetry]
name = "project_name"
version = "0.1.0"
description = ""
authors = ["Your Name <your_email>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.28"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"